--- a/src/unsw/loopmania/LoopManiaView.fxml
+++ b/src/unsw/loopmania/LoopManiaView.fxml
@@ -122,6 +122,86 @@
                   <Font name="Avenir Next Bold" size="14.0" />
                </font>
             </Text>
+            <Text fill="#4d4d4d" strokeType="OUTSIDE" strokeWidth="0.0" text="Armour">
+               <font>
+                  <Font name="Avenir Book" size="13.0" />
+               </font>
+            </Text>
+            <GridPane fx:id="equippedArmour" hgap="5.0" vgap="5.0">
+               <columnConstraints>
+                  <ColumnConstraints />
+                  <ColumnConstraints />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
+               <children>
+                  <ImageView id="blankCell" GridPane.rowIndex="0">
+                     <image>
+                        <Image url="@../../images/image_just_black_tiny.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                     <image>
+                        <Image url="@../../images/image_just_black_tiny.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </GridPane>
+            <Text fill="#4d4d4d" strokeType="OUTSIDE" strokeWidth="0.0" text="Shield">
+               <font>
+                  <Font name="Avenir Book" size="13.0" />
+               </font>
+            </Text>
+            <GridPane fx:id="equippedShield" hgap="5.0" vgap="5.0">
+               <columnConstraints>
+                  <ColumnConstraints />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
+               <children>
+                  <ImageView id="blankCell" GridPane.rowIndex="0">
+                     <image>
+                        <Image url="@../../images/shield_unequipped.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </GridPane>
+            <Text fill="#4d4d4d" strokeType="OUTSIDE" strokeWidth="0.0" text="Weapon">
+               <font>
+                  <Font name="Avenir Book" size="13.0" />
+               </font>
+            </Text>
+            <GridPane fx:id="equippedWeapon" hgap="5.0" vgap="5.0">
+               <columnConstraints>
+                  <ColumnConstraints />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
+               <children>
+                  <ImageView id="blankCell" GridPane.rowIndex="0">
+                     <image>
+                        <Image url="@../../images/sword_unequipped.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </GridPane>
+            <Text fill="#4d4d4d" strokeType="OUTSIDE" strokeWidth="0.0" text="remove below later">
+               <font>
+                  <Font name="Avenir Book" size="13.0" />
+               </font>
+            </Text>
             <!-- equippedItems contains the equipment equipped by the character in special slots -->
             <!-- TODO = extend this to have slots for equipping armour, shields, helmets, and any other equippable items -->
             <GridPane fx:id="equippedItems" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
@@ -161,7 +241,7 @@
             </Text>
 
             <!-- unequippedInventory is for unequipped items, which can be dragged into the equipped inventory -->
-            <GridPane fx:id="unequippedInventory" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+            <GridPane fx:id="unequippedInventory" hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
                <columnConstraints>
                   <ColumnConstraints />
                </columnConstraints>
