--- a/src/unsw/loopmania/LoopManiaView.fxml
+++ b/src/unsw/loopmania/LoopManiaView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,7 +20,7 @@
 
 <AnchorPane fx:id="anchorPaneRoot" onKeyPressed="#handleKeyPress" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <!-- HBox is used to stack items horizontally left to right -->
-   <HBox>
+   <HBox prefHeight="329.0" prefWidth="124.0">
       <!-- VBox is used to stack items vertically top to bottom -->
       <VBox fx:id="heroCastle">
          <GridPane fx:id="shopItems" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
@@ -230,12 +231,38 @@
             </GridPane>
 
             <!-- clicking this button returns the human player to the main menu -->
-            <Button text="Exit to Main Menu" onAction="#switchToMainMenu"/>
-            <Button fx:id="pauseButton" text="Pause" onAction="#pauseGame"/>
+            <Button onAction="#switchToMainMenu" text="Exit to Main Menu" />
+            <Button fx:id="pauseButton" onAction="#pauseGame" text="Pause" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </VBox>
+   </HBox>
+   <HBox fx:id="battle" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+            <children>
+               <ImageView fx:id="heroBattle" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <viewport>
+                     <Rectangle2D />
+                  </viewport>
+                  <image>
+                     <Image url="@../../images/human_new.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </VBox>
+         <Button fx:id="finishBattleButton" mnemonicParsing="false" onAction="#onFinishBattleButton" text="Continue" />
+         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+            <children>
+               <ImageView fx:id="enemyBattle" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <viewport>
+                     <Rectangle2D />
+                  </viewport>
+               </ImageView>
+            </children>
+         </VBox>
+      </children>
    </HBox>
 </AnchorPane>
