--- a/src/unsw/loopmania/LoopManiaView.fxml
+++ b/src/unsw/loopmania/LoopManiaView.fxml
@@ -251,16 +251,22 @@
                      <Image url="@../../images/human_new.png" />
                   </image>
                </ImageView>
+               <Text fx:id="characterBattleHealth" fill="#ff0e0e" strokeType="OUTSIDE" strokeWidth="0.0">
+                  <VBox.margin>
+                     <Insets top="20.0" />
+                  </VBox.margin>
+               </Text>
             </children>
          </VBox>
          <Button fx:id="finishBattleButton" mnemonicParsing="false" onAction="#onFinishBattleButton" text="Continue" />
          <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-               <ImageView fx:id="enemyBattle" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                  <viewport>
-                     <Rectangle2D />
-                  </viewport>
-               </ImageView>
+               <Text fx:id="enemyBattleHealth" fill="#ff0e0e" strokeType="OUTSIDE" strokeWidth="0.0">
+                  <VBox.margin>
+                     <Insets bottom="20.0" />
+                  </VBox.margin>
+               </Text>
+               <ImageView fx:id="enemyBattle" fitHeight="100.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
             </children>
          </VBox>
       </children>
