implemented gamemodes, currently fixing a bug with purchasing items in the shop in survival and berserker game modes

--- a/src/unsw/loopmania/LoopManiaView.fxml
+++ b/src/unsw/loopmania/LoopManiaView.fxml
@@ -81,6 +81,13 @@
          <children>
             <VBox>
                <children>
+                  <Text fx:id="gameModeDisplay" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+                     <font>
+                        <Font name="Avenir Book" size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+               <children>
                   <HBox>
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cycle: ">
