--- a/src/unsw/loopmania/MainMenuView.fxml
+++ b/src/unsw/loopmania/MainMenuView.fxml
@@ -4,6 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <!-- TODO = modify and expand the range of menus available from the menu menu, and develop game modes you can select when starting a new game -->
 
@@ -13,6 +17,47 @@
       <Label text="Main Menu" />
       <!-- clicking button should start/resume the game -->
       <Button fx:id="startGameButton" text="Start Game" onAction="#switchToGame"/>
+      <Label text="Select Game Mode" />
+      <RadioButton fx:id="standardMode" text="Standard Mode">
+         <toggleGroup>
+            <ToggleGroup fx:id="modeSelection"/>
+         </toggleGroup>
+      </RadioButton>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Play a classic game of Loop Mania.">
+         <font>
+            <Font name="Avenir Book" size="11.0" />
+         </font>
+      </Text>
+      <RadioButton fx:id="survivalMode" text="Survival Mode">
+         <toggleGroup>
+            <fx:reference source="modeSelection"/>
+         </toggleGroup>
+      </RadioButton>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="You can only purchase one Health Potion in the shop per round.">
+         <font>
+            <Font name="Avenir Book" size="11.0" />
+         </font>
+      </Text>
+      <RadioButton fx:id="berserkerMode" text="Berserker Mode">
+         <toggleGroup>
+            <fx:reference source="modeSelection"/>
+         </toggleGroup>
+      </RadioButton>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="You can only purchase one piece of Protective Gear in the shop per round.">
+         <font>
+            <Font name="Avenir Book" size="11.0" />
+         </font>
+      </Text>
+      <RadioButton fx:id="confusingMode" text="Confusing Mode">
+         <toggleGroup>
+            <fx:reference source="modeSelection"/>
+         </toggleGroup>
+      </RadioButton>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Now isn't that a bit confusing...">
+         <font>
+            <Font name="Avenir Book" size="11.0" />
+         </font>
+      </Text>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
