--- a/src/unsw/loopmania/MainMenuView.fxml
+++ b/src/unsw/loopmania/MainMenuView.fxml
@@ -12,11 +12,12 @@
 <!-- TODO = modify and expand the range of menus available from the menu menu, and develop game modes you can select when starting a new game -->
 
 <!-- vertically stacked label and button -->
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="mainMenuContainer" alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Main Menu" />
       <!-- clicking button should start/resume the game -->
       <Button fx:id="startGameButton" text="Start Game" onAction="#switchToGame"/>
+      <Button fx:id="selectMapButton" text="Choose Map" onAction="#openMapSelectScreen"/>
       <Label text="Select Game Mode" />
       <RadioButton fx:id="standardMode" text="Standard Mode">
          <toggleGroup>
